[Bugfix] Fix network::SimpleURLLoader migration

Correctly migrate the usages of |net::URLRequestContext| to
|network::SimpleURLLoader| in:

  - Chrome OS Account Manager
  - Chrome OS OAuth Delegate
  - Chrome OS Account Manager's account addition page

This basically reverts (and migrates) parts of
http://crrev.com/c/1091533 and re-lands parts of
http://crrev.com/c/1105777

Bug: 864605, 820046
Change-Id: I921dbb4c5fbf4ea9801d80d20ce1c96718eddc4b
Reviewed-on: https://chromium-review.googlesource.com/1140714
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Kush Sinha <sinhak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575748}
Former-commit-id: 44a01c0057917e535fcfc062532b9ace85a99849